# pants-plugins

./: .gitignore  README.md  pyproject.toml
src/pants_plugins/: calver_tags.py  register.py
src/pants_plugins.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/poochella_pants/: calver_tags.py  register.py
