[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pants-plugins"
version = "0.1.0"
description = "Shared pantsbuild plugin for poochella."
requires-python = ">=3.9"
# Intentionally no pantsbuild.pants dependency: pants resolves the plugin into
# the same venv as itself and supplies the matching version.

[tool.setuptools.packages.find]
where = ["src"]
